--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,u,c=r[0],i=r[1],l=r[2],p=0,s=[];p<c.length;p++)u=c[p],Object.prototype.hasOwnProperty.call(o,u)&&o[u]&&s.push(o[u][0]),o[u]=0;for(n in i)Object.prototype.hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(f&&f(r);s.length;)s.shift()();return a.push.apply(a,l||[]),t()}function t(){for(var e,r=0;r<a.length;r++){for(var t=a[r],n=!0,c=1;c<t.length;c++){var i=t[c];0!==o[i]&&(n=!1)}n&&(a.splice(r--,1),e=u(u.s=t[0]))}return e}var n={},o={3:0},a=[];function u(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,u),t.l=!0,t.exports}u.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var a,c=document.createElement("script");c.charset="utf-8",c.timeout=120,u.nc&&c.setAttribute("nonce",u.nc),c.src=function(e){return u.p+"static/js/"+({}[e]||e)+"."+{0:"66da9c9e",1:"2d0a3e6b",5:"ebd46d1d",6:"9ca8b294",7:"f3ec20a9",8:"1c6a5935",9:"47e5e9da",10:"c3b81149",11:"1c7558ec",12:"29c776cd"}[e]+".chunk.js"}(e);var i=new Error;a=function(r){c.onerror=c.onload=null,clearTimeout(l);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),a=r&&r.target&&r.target.src;i.message="Loading chunk "+e+" failed.\n("+n+": "+a+")",i.name="ChunkLoadError",i.type=n,i.request=a,t[1](i)}o[e]=void 0}};var l=setTimeout((function(){a({type:"timeout",target:c})}),12e4);c.onerror=c.onload=a,document.head.appendChild(c)}return Promise.all(r)},u.m=e,u.c=n,u.d=function(e,r,t){u.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},u.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},u.t=function(e,r){if(1&r&&(e=u(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(u.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)u.d(t,n,function(r){return e[r]}.bind(null,n));return t},u.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return u.d(r,"a",r),r},u.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},u.p="/",u.oe=function(e){throw console.error(e),e};var c=this.webpackJsonpmyapp=this.webpackJsonpmyapp||[],i=c.push.bind(c);c.push=r,c=c.slice();for(var l=0;l<c.length;l++)r(c[l]);var f=i;t()}([])</script><script src="/static/js/4.301708c8.chunk.js"></script><script src="/static/js/main.677ab0b4.chunk.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tình yêu nè 🥰</title>
+    <link rel="stylesheet" href="./static/all.min.css">
+    <link rel="stylesheet" href="./static/style.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="icon" href="./static/hearts.svg">
+    <script>
+        document.addEventListener(
+            "DOMContentLoaded",
+            function () {
+                var days = document.querySelector(".days span");
+                var hour = document.querySelector(".hour");
+                var min = document.querySelector(".min");
+                var second = document.querySelector(".second");
+
+                var startDate = new Date(2020, 3, 14);
+                days.innerText = Math.floor((new Date() - startDate) / 86400000);
+                countTime();
+
+                function countTime() {
+                    let today = new Date();
+                    let ms = (today - startDate) % 86400000;
+                    hour.innerText = Math.floor(ms / 3600000);
+                    min.innerText = Math.floor((ms % 3600000) / 60000);
+                    second.innerText = Math.floor(((ms % 3600000) % 60000) / 1000);
+                }
+
+                setInterval(countTime, 1000);
+            },
+            false
+        );
+    </script>
+</head>
+
+<body cz-shortcut-listen="true">
+    <section>
+        <div class="container">
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx"><img src="./static/em.JPG" alt=""></div>
+                    <div class="contentBx">
+                        <h3>Trần Hồng<br><span>25 - 08 - 1998</span></h3>
+                    </div>
+                </div>
+                <ul class="sci">
+                    <li style="--i:1">
+                        <a href="https://www.facebook.com/hong250898" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li style="--i:2">
+                        <a href="https://nguyenchi1998.github.io/#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li style="--i:3">
+                        <a href="https://www.instagram.com/hong.2508" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <div class="content">
+                    <img src="./static/hearts.svg" alt="heart" class="heart">
+                    <div class="time">
+                        <h2 class="days"><span>82</span>&nbsp;DAYS</h2>
+                        <p class="sup-time">
+                            <span class="hour">16</span>:<span class="min">53</span>:<span class="second">0</span>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="content">
+                    <div class="imgBx"><img src="./static/anh.jpg" alt=""></div>
+                    <div class="contentBx">
+                        <h3>Nguyễn Chi<br><span>22 - 06 - 1998</span></h3>
+                    </div>
+                </div>
+                <ul class="sci">
+                    <li style="--i:1">
+                        <a href="https://www.facebook.com/nguyenchi1998" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li style="--i:2">
+                        <a href="https://nguyenchi1998.github.io/#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li style="--i:3">
+                        <a href="https://www.instagram.com/nguyen.chi.98" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </section>
+
+
+</body>
+
+</html>
